prevent scrolling on mobile chrome

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ html,
 body {
   overflow: hidden;
   position: relative;
+  overscroll-behavior: none;
 }
 
 #app {
